1std wegen q, kleiner fckschis

--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@ body {
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
+
+<section>
 <hgroup><h1>print("hello world")</h1><p>WTF is <span class="jumi-font">jumi.biz</span> ?</p></hgroup>
-<section><p>Kompakte Inhalte über
+<p>Kompakte Inhalte über
 <b class="r">Linux</b> 
 <b class="g">Windows</b> 
 <b class="b">Infosec</b> 
@@ -115,18 +117,20 @@ body {
 Text&nbsp;minimalisiert, fragmentiert und visuell ergonomisiert.</p></section>
 <Section>Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
 davon verbleibt nach einem Tag vermutlich ~50%,
-nach zwei Tagen <b>~30%</b> im Gedächtnis. (0,25*0,3=<b>7,5%</b>)</section>
+nach zwei Tagen <b>~30%</b> im Gedächtnis. Ergibt <b>~7,5%</b> Text.</section>
 <section class="bsp-txt">
-<blockquote><b>Text A</b> Zwanzig Zwerge machen Handstand,
-zehn im Wandschrank, zehn am Sandstrand.</blockquote>
-<blockquote><b>Text B</b> Ort / Zwergenhandstände:<br> Schrank / 10, Strand / 10</blockquote>
-<table>
-<caption>Vergleich</caption>
+<b>Beispiel A</b><aside>Zwanzig Zwerge machen Handstand,
+zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
+<b>Beispiel B</b><aside>Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
+</section>
+<section id="tabelle-1" class="flex"><table>
+<caption>Text-Bestandteile</caption>
     <thead>
         <tr>
         <th>Text</th>
         <th>Wörter</th>
         <th>Zeichenfolgen</th>
+        <th>Kerninhalte</th>
         <th>Relevanz</th>
         </tr>
     </thead>
@@ -135,13 +139,15 @@ zehn im Wandschrank, zehn am Sandstrand.</blockquote>
         <td><span><b>A</b></span></td>
         <td><span>13</span></td>
         <td><span>10</span></td>
+        <td><span>6</span></td>
         <td><span>60%</span></td>
         </tr>
         <tr>
         <td><span><b>B</b></span></td>
         <td><span>8</span></td>
         <td><span>6</span></td>
-        <td><span id="UAP"><b>83%</b></span></td>
+        <td><span>5</span></td>
+        <td><span><b>83%</b></span></td>
         </tr>
     </tbody>
 </table></section>
@@ -222,26 +228,26 @@ zehn im Wandschrank, zehn am Sandstrand.</blockquote>
 </div>
 <br>
 <!-- PERSON -->
-    <p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;will leben, will&nbsp;<b class="b">Wasser</b> zum Trinken, will&nbsp;<b class="y">Luft</b> zum&nbsp;Atmen. Bitte&nbsp;Ende, flüster das größte Geheimnis, das im&nbsp;Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie <b class="o">Erde</b> im <b>Wind</b> bewegt.</p>
-    <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite>
+    <section><p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;will leben, will&nbsp;<b class="b">Wasser</b> zum Trinken, will&nbsp;<b class="y">Luft</b> zum&nbsp;Atmen. Bitte&nbsp;Ende, flüster das größte Geheimnis, das im&nbsp;Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie <b class="o">Erde</b> im <b>Wind</b> bewegt.</p>
+    <aside><q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite></aside><section>
 </article>
 <article id="area-3" class="content flow">
 <!-- STUFF -->
 <h4>Dark Mode Only</h4>
     <p>Ein dunkler Bildschirm spart bis zu <b>60%</b> Energie und schont die&nbsp;Augen.
     Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
-    <q>Come with me. It&nbsp;is the&nbsp;only&nbsp;way.</q><br>
-    <cite>- Darth Vader (1980)</cite>
+    <aside><q>Come with me. It&nbsp;is the&nbsp;only&nbsp;way.</q><br>
+    <cite>- Darth Vader (1980)</cite></aside>
 </article>
 <article id="area-4" class="content flow">
 <!-- STUFF -->
 <h3>IT &#126; Kung Fu</h3>
-    <blockquote>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und Techniken, die&nbsp;durch lange, harte&nbsp;<b class="r">Übung</b> und <b class="g">Geduld</b> erlangt&nbsp;werden.
+    <section>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und Techniken, die&nbsp;durch lange, harte&nbsp;<b class="r">Übung</b> und <b class="g">Geduld</b> erlangt&nbsp;werden.
     Es&nbsp;ist eine Disziplin, die&nbsp;zur Meisterung viel <b class="b">Engagement und Einsatz</b>&nbsp;erfordert.
-    Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien, IT&nbsp;überträgt Signale und Daten, die&nbsp;durch konstruierter, physikalischer&nbsp;Technik und Logik gesteuert&nbsp;werden. Das Beherrschen von Kung&nbsp;Fu verbessert Beweglichkeit, während&nbsp;die Verarbeitung von Informationen <b class="y">analytisches Denken</b> entwickelt. In&nbsp;der&nbsp;IT, wie&nbsp;im Kung&nbsp;Fu, geht es um <b class="c">Hingabe</b>, <b class="m">Ausdauer</b> und
-    <b class="o">Skills</b>.</blockquote>
-    <q>Der Meister erscheint wenn der Schüler bereit&nbsp;ist.</q><br>
-    <cite>- Karate Tiger (1986)</cite>
+    Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien, IT&nbsp;überträgt Signale und Daten, die&nbsp;durch konstruierter, physikalischer&nbsp;Technik und Logik gesteuert&nbsp;werden. Das&nbsp;Beherrschen von Kung&nbsp;Fu verbessert Beweglichkeit, während&nbsp;die Verarbeitung von Informationen <b class="y">analytisches Denken</b> entwickelt. In&nbsp;der&nbsp;IT, wie&nbsp;im Kung&nbsp;Fu, geht es um <b class="c">Hingabe</b>, <b class="m">Ausdauer</b> und
+    <b class="o">Skills</b>.</section>
+    <aside><q>Der Meister erscheint wenn der Schüler bereit&nbsp;ist.</q><br>
+    <cite>- Karate Tiger (1986)</cite></aside>
 </article>
 <article id="area-5" class="content flow">
 <h2>Quiz-Frage 3327</h2>
@@ -249,8 +255,8 @@ zehn im Wandschrank, zehn am Sandstrand.</blockquote>
 <summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
 <br><span class="quiz-answers">A keyboard</span>
 </details>
-<q>Die Wissenschaft ist bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q><br>
-<cite>- Nikola Tesla (1856-1943)</cite>
+<aside><q>Die Wissenschaft ist bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q><br>
+<cite>- Nikola Tesla (1856-1943)</cite></aside>
 </article></div></main>
 
 <!-- ### Debugger: Auto-Refresh Page (-option)
