--- a/index.html
+++ b/index.html
@@ -44,6 +44,40 @@
     rgba(0, 0, 0, 0.1) 0px 2px 4px,
     rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
 }
+@media screen and (min-width: 35em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two three"
+        "five five"
+        "four four";
+    }
+}
+@media screen and (min-width: 38em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two five"
+        "three five"
+        "four four";
+    }
+}
+@media screen and (min-width: 54em) {
+    .grid-container {grid-template-areas:
+        "one one two"
+        "five five five"
+        "three four four";
+    }
+}
+@media screen and (min-width: 75em) {
+    .grid-container {grid-template-areas:
+        "one one two five"
+        "three four four five";
+    }
+}
+@media screen and (max-width: 35em) {
+    #tasten-steuerung {
+    display:none;
+    }
+}
 @keyframes neon {
      from {text-shadow:
           0 0 6px rgba(202,228,225,0.92),
@@ -103,9 +137,9 @@ body {
 <div class="grid-container">
 <article id="area-1" class="content flow">
 <!-- HELLO WORLD -->
-
+<h1>print("hello world")</h1>
 <section>
-<hgroup><h1>print("hello world")</h1><p>WTF is <span class="jumi-font">jumi.biz</span> ?</p></hgroup>
+<h4>WTF is <span class="jumi-font">jumi.biz</span> ?</h4>
 <p>Kompakte Inhalte über
 <b class="r">Linux</b> 
 <b class="g">Windows</b> 
@@ -115,16 +149,18 @@ body {
 <b class="m">Tools</b> und
 <b class="o">Exobiologie.</b>
 Text&nbsp;minimalisiert, fragmentiert und visuell ergonomisiert.</p></section>
-<Section>Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
+<Section id="beschreibung">
+<h3>Kinderleichtes Lesen</h3>
+Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
 davon verbleibt nach einem Tag vermutlich ~50%,
 nach zwei Tagen <b>~30%</b> im Gedächtnis. Ergibt <b>~7,5%</b> Text.</section>
 <section class="bsp-txt">
+<h3>Text-Beispiele</h3>
 <b>Beispiel A</b><aside>Zwanzig Zwerge machen Handstand,
 zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <b>Beispiel B</b><aside>Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
-</section>
-<section id="tabelle-1" class="flex"><table>
-<caption>Text-Bestandteile</caption>
+<table>
+<caption>23% Mehrwert</caption>
     <thead>
         <tr>
         <th>Text</th>
@@ -169,7 +205,7 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     <li>[24-01] Themes-Feature</li></ul></aside>
 </section>
 <section class="flex">
-<table id="tasten-steuerung">
+<table id="tabelle-2">
 <caption>Tasten-Steuerung</caption>
     <thead>
         <tr>
@@ -190,6 +226,7 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 </table></section>
 </article>
 <article id="area-2" class="content flow">
+
 <h2>&#36; whoami</h2>
 <div class="flex">
   <!-- PICTURE -->
@@ -228,8 +265,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 </div>
 <br>
 <!-- PERSON -->
-    <section><p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;will leben, will&nbsp;<b class="b">Wasser</b> zum Trinken, will&nbsp;<b class="y">Luft</b> zum&nbsp;Atmen. Bitte&nbsp;Ende, flüster das größte Geheimnis, das im&nbsp;Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie <b class="o">Erde</b> im <b>Wind</b> bewegt.</p>
-    <aside><q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite></aside><section>
+    <section><p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;will leben, will&nbsp;<b class="b">Wasser</b> zum Trinken, will&nbsp;<b class="y">Luft</b> zum&nbsp;Atmen. Bitte&nbsp;Ende, flüster das größte Geheimnis, das im&nbsp;Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie <b class="o">Erde</b> im <b>Wind</b> bewegt.</p></section>
+    <aside><q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite></aside>
 </article>
 <article id="area-3" class="content flow">
 <!-- STUFF -->
