Quiz added and sow

--- a/index.html
+++ b/index.html
@@ -287,10 +287,18 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     <cite>- Karate Tiger (1986)</cite></aside>
 </article>
 <article id="area-5" class="content flow">
-<h2>Quiz-Frage 3327</h2>
+<h3>Click to open</h3>
 <details class="flow">
 <summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
 <br><span class="quiz-answers">A keyboard</span>
+</details>
+<details class="flow">
+<summary>Wieso nimmt Windows keine Drogen ?</summary>
+<br><span class="quiz-answers">Damit es nicht abstürzt...</span>
+</details>
+<details class="flow">
+<summary>Nikola&nbsp;Tesla's Apartment Number in the New York Hotel ?</summary>
+<br><span class="quiz-answers">3327</span>
 </details>
 <aside><q>Die Wissenschaft ist bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q><br>
 <cite>- Nikola Tesla (1856-1943)</cite></aside>
