removed vw from th

--- a/index.html
+++ b/index.html
@@ -130,8 +130,6 @@ body {
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
 <li><a href="Cheats.htm"><i class="list-icon">
 <img src="assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="list-icon">
-<img src="assets/img/ico/jumi.ico" alt="WTF is jumi?"></i>wtf is jumi?</a></li>
 </ul></nav></div></header><main>
 <!-- MAIN -->
 <div class="grid-container">
@@ -139,7 +137,7 @@ body {
 <!-- HELLO WORLD -->
 <h1>print("hello world")</h1>
 <section>
-<h4>WTF is <span class="jumi-font">jumi.biz</span> ?</h4>
+<h4>wtf is <span class="jumi-font">jumi.biz</span> ?</h4>
 <p>Kompakte Inhalte über
 <b class="r">Linux</b> 
 <b class="g">Windows</b> 
