added Exobiologie and a short description

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ nach zwei Tagen <b>~30%</b> im Gedächtnis. Ergibt <b>~7,5%</b> Text.</section>
 <b>Beispiel A</b><aside>Zwanzig Zwerge machen Handstand,
 zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <b>Beispiel B</b><aside>Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
-<table>
+<table id="tabelle-1">
 <caption>23% Mehrwert</caption>
     <thead>
         <tr>
