--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ body {
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
 <li><a href="Content.htm"><i class="list-icon">
-<img src="assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<img src="assets/img/ico/menu-content.ico" alt="Content"></i>options</a></li>
 <li><a href="Links.htm"><i class="list-icon">
 <img src="assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
 <li><a href="Cheats.htm"><i class="list-icon">
