--- a/pages/WTF_is_jumi.htm
+++ b/pages/WTF_is_jumi.htm
@@ -7,7 +7,7 @@
 <meta name="keywords" content="linux,windows,cybersecurity,hacking,coding,shell,tools,network,basics">
 <meta name="author" content="Jumi">
 <!-- FAVICON --><link rel="icon" href="../assets/img/ico/jumi.ico">
-<!-- TITLE --><title>WTF</title>
+<!-- TITLE --><title>Content</title>
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" href="../assets/css/animations.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
@@ -44,6 +44,40 @@
     rgba(0, 0, 0, 0.1) 0px 2px 4px,
     rgba(0, 0, 0, 0.4) 0px -2px 0px inset;
 }
+@media screen and (min-width: 35em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two three"
+        "five five"
+        "four four";
+    }
+}
+@media screen and (min-width: 38em) {
+    .grid-container {grid-template-areas:
+        "one one"
+        "two five"
+        "three five"
+        "four four";
+    }
+}
+@media screen and (min-width: 54em) {
+    .grid-container {grid-template-areas:
+        "one one two"
+        "five five five"
+        "three four four";
+    }
+}
+@media screen and (min-width: 75em) {
+    .grid-container {grid-template-areas:
+        "one one two five"
+        "three four four five";
+    }
+}
+@media screen and (max-width: 35em) {
+    #tasten-steuerung {
+    display:none;
+    }
+}
 @keyframes neon {
      from {text-shadow:
           0 0 6px rgba(202,228,225,0.92),
@@ -78,7 +112,7 @@ body {
 <body id="ଘ(੭*ˊᵕˋ)੭*ˋhello_ɪɴᴛᴇʀɴᴇᴛ">
 <header><div class="header-content">
 <!-- LOGO -->
-<span id="jumi-logo"><img src="../assets/img/ico/jumi.ico" alt="Jumi Logo"></span>
+<span id="jumi-logo"><img src="assets/img/ico/jumi.ico" alt="Jumi Logo"></span>
 <a href="https://www.jumi.biz"><span id="jumi-biz">jumi.biz</span></a>
 <!-- BUTTON -->
 </div><nav class="navigation">
@@ -90,146 +124,20 @@ body {
 </button><div class="header-text"><span id="banner">(&lt;&gt;..&lt;&gt;)</span>
 <!-- MENU -->
 <ul data-state="closed" class="menu-list">
+<li><a href="https://www.jumi.biz"><i class="list-icon">
+<img src="../assets/img/ico/jumi.ico" alt="Home"></i>start</a></li>
 <li><a href="Content.htm"><i class="list-icon">
-<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>content</a></li>
+<img src="../assets/img/ico/menu-content.ico" alt="Content"></i>options</a></li>
 <li><a href="Links.htm"><i class="list-icon">
 <img src="../assets/img/ico/menu-links.ico" alt="Links"></i>links</a></li>
 <li><a href="Cheats.htm"><i class="list-icon">
 <img src="../assets/img/ico/menu-cheats.ico" alt="Cheats"></i>cheats</a></li>
-<li><a href="https://www.jumi.biz"><i class="list-icon">
-<img src="../assets/img/ico/jumi.ico" alt="Home"></i>wtf is jumi?</a></li>
 </ul></nav></div></header><main>
 <!-- MAIN -->
 <div class="grid-container">
 <article id="area-1" class="content flow">
-<!-- HELLO WORLD -->
-<hgroup><h1>print("hello world")</h1><p>WTF is <span class="jumi-font">jumi.biz</span> ?</p></hgroup>
-<section><p>Kompakte Inhalte über
-<b class="r">Linux</b>
-<b class="g">Windows</b>
-<b class="b">Infosec</b>
-<b class="y">Coding</b>
-<b class="c">Shell</b>
-<b class="m">Tools</b> und
-<b class="o">Exobiologie</b>
-mit relative hohem&nbsp;Informationsgehalt.
-Normaler Text hat ca.&nbsp;25% relevanten Kerninhalt(x),
-davon verbleibt nach einem Tag vermutlich&nbsp;50%,
-nach&nbsp;zwei Tagen&nbsp;30% im Gedächtnis.<br>
-Das ergibt&nbsp;7,5%&nbsp;Nutztext (0,25x*0,3=0,075x).<br><br>
-Mein Text ist minimalisiert, fragmentiert und visuell&nbsp;ergonomisiert.<br>
-<b>Normaler-Text(A):</b><br><q>Zwanzig Zwerge machen Handstand,
-zehn im Wandschrank, zehn am Sandstrand.</q><br>
-<b>Kompakter-Text(B):</b><br><q>Zwergenhandstände: Schrank=10, Strand=10</q><br>
-<b class="p">Ergebnis(A):</b><br>13 Worte aus 10 Zeichenfolgen,<br> davon 6 relevant (=60%)<br>
-<b class="p">Ergebnis(B):</b><br>7 Worte aus 5 Zeichenfolgen,<br> davon 5 relevant (=100%)
 
-</p></section>
-<!-- ABOUT -->
-<section class="flex">
-<aside><h4>$ history</h4><ul>
-    <li>[2019-06] Domain gemietet</li>
-    <li>[2020/21] Konzeptentwicklung</li>
-    <li>[2022-11] Ausarbeitung</li>
-    <li>[2023-03] Designentwicklung</li>
-    <li>[2023-08] Github-Anbindung</li>
-    <li>[2023-10] Integration</li></ul></aside>
-<aside><h4>Milestones To-Do:</h4><ul>
-    <li>[2023-11] Edits/Content</li>
-    <li>[2023-11] Instagram Content</li>
-    <li>[2023-12] JavaScript AddOns</li>
-    <li>[2024-01] PHP-Implementierung</li>
-    <li>[2024-01] Quiz-Feature(ChatGPT)</li>
-    <li>[2024-01] Themes-Feature</li></ul></aside>
-</section>
-<section class="flex">
-<table id="tasten-steuerung">
-<caption>Tasten-Steuerung</caption>
-    <thead>
-        <tr>
-        <th>Vollbild</th>
-        <th>Zurück</th>
-        <th>Weiter</th>
-        <th>Öffnen</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr class="button-styled">
-        <td><span>F11</span></td>
-        <td><span>Shift</span> &#43; <span>TAB</span></td>
-        <td><span>TAB</span></td>
-        <td><span>Enter</span></td>
-        </tr>
-    </tbody>
-</table></section>
-</article>
-<article id="area-2" class="content flow">
-<h2>&#36; whoami</h2>
-<div class="flex">
-  <!-- PICTURE -->
-  <img id="modalTrigger01" src="../assets/img/profile-img-1.png" alt="Picture shows Jumi">
-  <dialog id="openModal01">
-    <figure>
-      <img src="../assets/img/modal/profile-img-modal-01.png" alt="Image-Modal" id="imgModal01">
-      <figcaption>
-        <h2>Human Interface</h2>
-      </figcaption>
-    </figure>
-    <button id="closeModal01"> &times; </button>
-  </dialog>
-  <!-- PICTURE -->
-  <img id="modalTrigger02" src="../assets/img/profile-img-2.png" alt="Picture shows shoe">
-  <dialog id="openModal02">
-    <figure>
-      <img src="../assets/img/modal/profile-img-modal-02.png" alt="Image-Modal" id="imgModal02">
-      <figcaption>
-        <h2>Local Area</h2>
-      </figcaption>
-    </figure>
-    <button id="closeModal02"> &times; </button>
-  </dialog>
-  <!-- PICTURE -->
-  <img id="modalTrigger03" src="../assets/img/profile-img-3.png" alt="Picture shows computer">
-  <dialog id="openModal03">
-    <figure>
-      <img src="../assets/img/modal/profile-img-modal-03.png" alt="Image-Modal" id="imgModal03">
-      <figcaption>
-        <h2>Central Processing</h2>
-      </figcaption>
-    </figure>
-    <button id="closeModal03"> &times; </button>
-  </dialog>
-</div>
-<br>
-<!-- PERSON -->
-    <p>Mich interessiert das&nbsp;Verborgene. Neugier&nbsp;ist wertvoll, wie das Wasser den Fischen, wie die Luft zum&nbsp;Atmen. Und am Ende sind wir selbst ein Geheimnis, das nur der Rauch des Feuers kennt. Die unfassbare Wahrheit erfasst uns, Erde im Wind.</p>
-    <q>Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.</q><br><cite>- V wie Vendetta (2005)</cite>
-</article>
-<article id="area-3" class="content flow">
-<!-- STUFF -->
-<h4>Dark Mode Only</h4>
-    <p>Ein dunkler Bildschirm spart bis zu 60% Energie und schont die&nbsp;Augen.
-    Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
-    <q>Come with me. It&nbsp;is the&nbsp;only&nbsp;way.</q><br>
-    <cite>- Darth Vader (1980)</cite>
-</article>
-<article id="area-4" class="content flow">
-<!-- STUFF -->
-<h3>IT &#126; Kung Fu</h3>
-    <blockquote>Der chinesische Begriff "Kung&nbsp;Fu" bezieht sich auf Fähigkeiten und Techniken, die&nbsp;durch lange, harte&nbsp;Übung und Geduld erlangt&nbsp;werden.
-    Es&nbsp;ist eine Disziplin, die&nbsp;zur Meisterung viel Engagement und Einsatz&nbsp;erfordert.
-    Kung&nbsp;Fu kombiniert Bewegungen und&nbsp;Strategien, IT&nbsp;überträgt Signale und Daten, die&nbsp;durch konstruierte, physikalische&nbsp;Technik und Logik erzeugt&nbsp;werden. Das Beherrschen von Kung&nbsp;Fu erfordert Reaktionsfähigkeit, während&nbsp;bei der Verarbeitung von Informationen analytisches Denken entscheidend&nbsp;ist. In&nbsp;der&nbsp;IT, wie&nbsp;im Kung&nbsp;Fu, liegt&nbsp;der Schlüssel in der Hingabe und dem Streben nach&nbsp;Exzellenz.</blockquote>
-    <q>Der Meister erscheint wenn der Schüler bereit&nbsp;ist.</q><br>
-    <cite>- Karate Tiger (1986)</cite>
-</article>
-<article id="area-5" class="content flow">
-<h2>Quiz-Frage 3327</h2>
-<details class="flow">
-<summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
-<br><span class="quiz-answers">A keyboard</span>
-</details>
-<q>Die Wissenschaft ist bestrebt, die&nbsp;Welt um uns herum zu&nbsp;verstehen. Die&nbsp;Technologie hingegen strebt danach, sie zu&nbsp;beherrschen.</q><br>
-<cite>- Nikola Tesla (1856-1943)</cite>
+
 </article></div></main>
 
 <!-- ### Debugger: Auto-Refresh Page (-option)
@@ -247,21 +155,21 @@ zehn im Wandschrank, zehn am Sandstrand.</q><br>
 <div class="leftside-profil-icons">
 <!-- GITHUB -->
 <a id="github-link" href="https://www.github.com/xuser123" target="_blank">
-<img src="../../assets/img/ico/github.ico" alt="Github/xuser123"></a>
+<img src="../assets/img/ico/github.ico" alt="Github/xuser123"></a>
 <!-- INSTAGRAM -->
 <a id="instagram-link" href="https://www.instagram.com/jumicontent" target="_blank">
-<img src="../../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
+<img src="../assets/img/ico/instagram.ico" alt="Instagram/jumicontent"></a></div>
 <!-- EMAIL -->
 <span id="contact-email">contact&#64;jumi.biz</span>
 <div class="rightside-site-features">
 <!-- EXPORT PDF -->
 <a id="export-icon" href="#">
-<img src="../../assets/img/ico/export-pdf.ico" alt="Download as PDF"></a>
+<img src="../assets/img/ico/export-pdf.ico" alt="Download as PDF"></a>
 <!-- GO TOP -->
 <a id="goto-top" href="#">
-<img src="../../assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a></div></div></footer>
+<img src="../assets/img/ico/go-top.ico" alt="Zum Seitenanfang"></a></div></div></footer>
 <!-- SCRIPTS -->
-<script defer src="../../assets/js/menu.js"></script>
-<script defer src="../../assets/js/modal.js"></script>
+<script defer src="../assets/js/menu.js"></script>
+<script defer src="../assets/js/modal.js"></script>
 
 </body></html>
